# Moo

./: .clang-format  .gitignore  CMakeLists.txt  CMakeListsMacOS.txt  CMakeListsUNIX.txt  README.md  example_usage.cpp  libMoo.so.1.0.0  meson.build  test_example  test_unix_compatibility.sh
.github/workflows/: apiTestLua.yml  apiTestPy.yml  apitest.yml  compiling.yml
api/: moo.cs  moo.go  moo.java  moo.lua  moo.py  moo.rs  run.lua  run.py  sot.api.json  test.py
api/go/: moo.go
api/lua/: moo.lua  run.cpp
api/python/: linux.py  moo.py  run.py  test.py
docs/: README.md  SUMMARY.md  api.md  basics.md  basics_notes.md  draft-isprime.md  draft-permu.md  grammar.md  intervals.md  todos.md
src/: export.h  library.cpp  library.h  moo.hpp  source_port.h
src/advance/: interval.cpp
src/basics/: binom.cpp  binomial_coefficient.cpp  binomial_coefficient.h  factorial.cpp  factorial.h  permutation.cpp  stdop.cpp
src/numbertheory/: av.cpp
src/numset/: numsets.hpp
src/trigonometry/: numbers.cpp  trigonometry.cpp
src/utility/: queue.cpp
test/: dllst.py  dllst2.py  test.csv  unit_test-re.py  unit_test.py  untest.py
test/api/python/: test.csv  test.py
test/others/: dllst.py  test.csv  unit_test.py
testing/: moo.py  testing.py
